# pSA

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci_backend.yaml
k8s/: deployment.yaml  service.yaml
src/psa/: SentimentAnalyzer.py  Services.py
tests/: test_sentiment_analyzer.py  test_services_api.py
