[project]
name = "psa"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Martinez",email = "mm@gmail.ett"}
]
readme = "README.md"
requires-python = ">=3.8"

[tool.poetry.dependencies]
transformers = "4.24.0"
torch = "1.13.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2"

[tool.poetry]
packages = [{include = "psa", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
